# GAForecast

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  transform1.ipynb
gaforecast/data/: transform1.ipynb
gaforecast/models/: binary_classifier.py  gaforecast.py  regressor.py
gaforecast/tests/: test_GAForecastBinaryClassifier.py  test_regressor.py
model/: gaforecast.py
tests/: test_GAForecastBinaryClassifier.py
