[tool.poetry]
name = "GAForecast"
version = "0.1.0"
description = "Library for time series prediction"
authors = ["Your Name <matejka.vaclav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"  # Specify your Python version here
numpy = "^1.21"  # Example dependency, specify the version you need
scikit-learn = "^1.0"  # Example dependency, specify the version you need

# Add any additional dependencies your package needs
# tensorflow = "^2.6"
# pandas = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"  # Example development dependency

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
